RESOLVED FIXED319131
REGRESSION(313868@main): [Skia] Broke certain images in PDF documents
https://bugs.webkit.org/show_bug.cgi?id=319131
Summary REGRESSION(313868@main): [Skia] Broke certain images in PDF documents
Michael Catanzaro
Reported 2026-07-10 15:41:20 PDT
Since 313868@main "[Skia] Add SkiaSerializedImageBuffer to properly transfer ImageBuffer to other threads" the large image on the first page of the following PDF document no longer displays properly: https://www.irs.gov/pub/irs-pdf/i1040gi.pdf At 313868@main, the image is missing. More recently, it has changed to a black square. I did not do a section bisection to see when the image changed from missing to black.
Attachments
Carlos Garcia Campos
Comment 1 2026-07-27 05:08:24 PDT
EWS
Comment 2 2026-07-29 01:50:03 PDT
Committed 318143@main (0d1e5abeecb6): <https://commits.webkit.org/318143@main> Reviewed commits have been landed. Closing PR #70250 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.