REGRESSION(313868@main): [Skia] Broke certain images in PDF documents https://bugs.webkit.org/show_bug.cgi?id=319131

Reviewed by Alejandro G. Castro.

Flush the context after copying buffer in
SkiaSerializedImageBuffer::sinkIntoImageBuffer().

* Source/WebCore/platform/graphics/skia/SkiaSerializedImageBuffer.cpp:
(WebCore::SkiaSerializedImageBuffer::sinkIntoImageBuffer):

Canonical link: https://commits.webkit.org/318143@main